se armo el footer

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
     </header>
     <main></main>
     <footer>
-        
+        <section class="container-fluid bg-black p-4">
+            <h5 class="text-light text-center">&copy; todos los derechos reservados</h5>
+        </section>
     </footer>
   </body>
   <script
