--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
           </nav>
     </header>
     <main>
-      <section class="container ">
-        <aside class="">
+      <section class="container">
+        <aside class="m-2">
           <div id="carouselPokedex" class="carousel slide">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselPokedex" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -48,13 +48,13 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="img/carrusel 1.jpg" class="d-block w-100" alt="...">
+                <img src="img/carrusel 1.jpg" class="d-block w-100" alt="carrusel 1">
               </div>
               <div class="carousel-item">
-                <img src="img/carrusel 2.jpg" class="d-block w-100" alt="...">
+                <img src="img/carrusel 2.jpg" class="d-block w-100" alt="carrusel 2">
               </div>
               <div class="carousel-item">
-                <img src="img/carrusel 3.jpg" class="d-block w-100" alt="...">
+                <img src="img/carrusel 3.jpg" class="d-block w-100" alt="carrusel 3">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselPokedex" data-bs-slide="prev">
@@ -65,6 +65,188 @@
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
+          </div>
+        </aside>
+        <aside class="row p-0">
+         <div class="col-md-4 col-lg-3 col-sm-12 p-0">
+            <div class="border border-secondary rounded-4 p-1 m-1 ">
+              <img src="./img/001.png" alt="" class="w-100">
+              <p>N°001</p>
+              <h5>Bulbasaur </h5>
+              <span class="badge" style="background: #198754;">Planta</span> <span class="badge" style="background:#6f42c1 " >Veneno</span>
+              <br>
+              <button class="btn btn-primary my-2">
+                Ver Detalle
+              </button>
+            </div>
+          </div>
+         <div class="col-md-4 col-lg-3 col-sm-12 p-0">
+            <div class="border border-secondary rounded-4 p-1 m-1 ">
+              <img src="./img/002.png" alt="" class="w-100">
+              <p>N°002</p>
+              <h5>Ivysaur </h5>
+              <span class="badge" style="background: #198754;">Planta</span> <span class="badge" style="background:#6f42c1 " >Veneno</span>
+              <br>
+              <button class="btn btn-primary my-2">
+                Ver Detalle
+              </button>
+            </div>
+          </div>
+         <div class="col-md-4 col-lg-3 col-sm-12 p-0">
+            <div class="border border-secondary rounded-4 p-1 m-1 ">
+              <img src="./img/003.png" alt="" class="w-100">
+              <p>N°003</p>
+              <h5>Venusaur </h5>
+              <span class="badge" style="background: #198754;">Planta</span> <span class="badge" style="background:#6f42c1 " >Veneno</span>
+              <br>
+              <button class="btn btn-primary my-2">
+                Ver Detalle
+              </button>
+            </div>
+          </div>
+         <div class="col-md-4 col-lg-3 col-sm-12 p-0">
+            <div class="border border-secondary rounded-4 p-1 m-1 ">
+              <img src="./img/004.png" alt="" class="w-100">
+              <p>N°004</p>
+              <h5>Charmander </h5>
+              <span class="badge" style="background: #e44506;">Fuego</span> 
+              <br>
+              <button class="btn btn-primary my-2">
+                Ver Detalle
+              </button>
+            </div>
+          </div>
+         <div class="col-md-4 col-lg-3 col-sm-12 p-0">
+            <div class="border border-secondary rounded-4 p-1 m-1 ">
+              <img src="./img/005.png" alt="" class="w-100">
+              <p>N°005</p>
+              <h5>Charmeleon</h5>
+              <span class="badge" style="background:#e44506;">Fuego</span> 
+              <br>
+              <button class="btn btn-primary my-2">
+                Ver Detalle
+              </button>
+            </div>
+          </div>
+         <div class="col-md-4 col-lg-3 col-sm-12 p-0">
+            <div class="border border-secondary rounded-4 p-1 m-1 ">
+              <img src="./img/006.png" alt="" class="w-100">
+              <p>N°006</p>
+              <h5>Charzizard</h5>
+              <span class="badge" style="background: #e44506;">Fuergo</span> <span class="badge" style="background:#9eb9dd " >Volador</span>
+              <br>
+              <button class="btn btn-primary my-2">
+                Ver Detalle
+              </button>
+            </div>
+          </div>
+         <div class="col-md-4 col-lg-3 col-sm-12 p-0">
+            <div class="border border-secondary rounded-4 p-1 m-1 ">
+              <img src="./img/007.png" alt="" class="w-100">
+              <p>N°007</p>
+              <h5>Squirtle </h5>
+              <span class="badge" style="background: #4d30f3;">Agua</span>
+              <br>
+              <button class="btn btn-primary my-2">
+                Ver Detalle
+              </button>
+            </div>
+          </div>
+         <div class="col-md-4 col-lg-3 col-sm-12 p-0">
+            <div class="border border-secondary rounded-4 p-1 m-1 ">
+              <img src="./img/008.png" alt="" class="w-100">
+              <p>N°008</p>
+              <h5>Wartortle </h5>
+              <span class="badge" style="background: #4d30f3;">Agua</span>
+              <br>
+              <button class="btn btn-primary my-2">
+                Ver Detalle
+              </button>
+            </div>
+          </div>
+         <div class="col-md-4 col-lg-3 col-sm-12 p-0">
+            <div class="border border-secondary rounded-4 p-1 m-1 ">
+              <img src="./img/009.png" alt="" class="w-100">
+              <p>N°009</p>
+              <h5>Blastoise </h5>
+              <span class="badge" style="background: #4d30f3;">Agua</span>
+                <br>
+              <button class="btn btn-primary my-2">
+                Ver Detalle
+              </button>
+            </div>
+          </div>
+         <div class="col-md-4 col-lg-3 col-sm-12 p-0">
+            <div class="border border-secondary rounded-4 p-1 m-1 ">
+              <img src="./img/010.png" alt="" class="w-100">
+              <p>N°010</p>
+              <h5>Caterpie</h5>
+              <span class="badge" style="background: #0fe432;">Bicho</span> 
+              <br>
+              <button class="btn btn-primary my-2">
+                Ver Detalle
+              </button>
+            </div>
+          </div>
+         <div class="col-md-4 col-lg-3 col-sm-12 p-0">
+            <div class="border border-secondary rounded-4 p-1 m-1 ">
+              <img src="./img/011.png" alt="" class="w-100">
+              <p>N°011</p>
+              <h5>Metapod</h5>
+              <span class="badge" style="background:#0fe432;">Bicho</span>
+              <br>
+              <button class="btn btn-primary my-2">
+                Ver Detalle
+              </button>
+            </div>
+          </div>
+         <div class="col-md-4 col-lg-3 col-sm-12 p-0">
+            <div class="border border-secondary rounded-4 p-1 m-1 ">
+              <img src="./img/012.png" alt="" class="w-100">
+              <p>N°012</p>
+              <h5>Butterfree</h5>
+              <span class="badge" style="background: #0fe432;">Bicho</span> <span class="badge" style="background:#9eb9dd " >Volador</span>
+              <br>
+              <button class="btn btn-primary my-2">
+                Ver Detalle
+              </button>
+            </div>
+          </div>
+         <div class="col-md-4 col-lg-3 col-sm-12 p-0">
+            <div class="border border-secondary rounded-4 p-1 m-1 ">
+              <img src="./img/013.png" alt="" class="w-100">
+              <p>N°013</p>
+              <h5>Weedle</h5>
+              <span class="badge" style="background:#0fe432;">Bicho</span> <span class="badge" style="background:#6f42c1 " >Veneno</span>
+              <br>
+              <button class="btn btn-primary my-2">
+                Ver Detalle
+              </button>
+            </div>
+          </div>
+         <div class="col-md-4 col-lg-3 col-sm-12 p-0">
+            <div class="border border-secondary rounded-4 p-1 m-1 ">
+              <img src="./img/014.png" alt="" class="w-100">
+              <p>N°014</p>
+              <h5>Kakuna </h5>
+              <span class="badge" style="background: #0fe432;">Bicho</span> <span class="badge" style="background:#6f42c1 " >Veneno</span>
+              <br>
+              <button class="btn btn-primary my-2">
+                Ver Detalle
+              </button>
+            </div>
+          </div>
+         <div class="col-md-4 col-lg-3 col-sm-12 p-0">
+            <div class="border border-secondary rounded-4 p-1 m-1 ">
+              <img src="./img/015.png" alt="" class="w-100">
+              <p>N°015</p>
+              <h5>Beedrill</h5>
+              <span class="badge" style="background:#0fe432;">Bicho</span> <span class="badge" style="background:#6f42c1 " >Veneno</span>
+              <br>
+              <button class="btn btn-primary my-2">
+                Ver Detalle
+              </button>
+            </div>
           </div>
         </aside>
       </section>
