se enmaqueto la pagina de detalles del pokemon

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
               <h5>Bulbasaur </h5>
               <span class="badge" style="background: #198754;">Planta</span> <span class="badge" style="background:#6f42c1 " >Veneno</span>
               <br>
-              <button class="btn btn-primary my-2">
+              <a class="btn btn-primary my-2" href="./pages/Detalle.html" role="button">
                 Ver Detalle
-              </button>
+              </a>
             </div>
           </div>
          <div class="col-md-4 col-lg-3 col-sm-12 p-0">
